--- a/src/app/new-prode/new-prode.module.scss
+++ b/src/app/new-prode/new-prode.module.scss
@@ -1,8 +1,8 @@
 @use 'styles/tokens' as t;
 
 .contentContainer {
-  margin-top: 108px;
-  margin-bottom: 128px;
+  margin-top: clamp(24px, 6vh, 108px);
+  margin-bottom: clamp(32px, 8vh, 128px);
 }
 
 .fullSection {
